# osp-sdk

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conformance_report.json  docker-compose.yml  fix_vps.sh  nginx_osp.conf  package.json  pyproject.toml  requirements.txt  setup_vps.sh  test_agent_manager.py  test_routing.py  vps_guide.md
.github/workflows/: deploy-pages.yml  deploy.yml
ai_core/: agent_manager.py  reindex_kb.py  skill_manager.py  vector_handler.py
ai_core/llm/: providers.py
ai_core/memory/: memory_store.py
ai_core/routing/: bm25.py  deterministic.py
ai_core/tests/: test_ai_handler_integration.py  test_invoice_skill.py  test_skill_manager.py
asp/: __init__.py  cli.py  client.py  decorators.py  server.py
dashboard/: main.py
dashboard/static/: style.css
dashboard/templates/: base.html  builder.html  chat.html  index.html  knowledge.html  settings.html
examples/: hello.py
integrations/google/: SETUP_GOOGLE_AUTH.md  analyze_drive_duplicates.py  analyze_drive_photos.py  analyze_email_storage.py  analyze_photos.py  auth.py  batch_auth.py  check_storage.py  classify_images.py  delete_drive_duplicates.py  delete_gmail_messages.py  download_photos.py  drive_client.py  gmail_client.py  label_gmail_photos.py  move_drive_duplicates.py  organize_drive_files.py  organize_photos.py  run_daily_briefing.py  upload_to_drive.py
integrations/imap/: email_config_template.json  imap_client.py  smtp_client.py
integrations/telegram/: ai_handler.py  connect_telegram.py  dump_data.py  generate_active_chats_deep_scan.py  generate_active_chats_excel.py  generate_active_chats_excel_optimized.py  list_active_chats.py  list_all_chats.py  monitor_bot.py  monitor_demo.py  organize_telegram_dump.py  run_bot.sh  server.py  youtube_handler.py
integrations/web/: web_handler.py
osp_cli/: main.py  registry.json
osp_core/: README.md  __init__.py  crypto.py  models.py  pyproject.toml
osp_core/tests/: test_crypto.py  test_models.py
osp_server/: server.py
osp_server/logic/: degradation.py  delivery.py  json_logger.py  metrics.py  registry.py  routing.py  safety.py
osp_server/middleware/: signature.py
osp_std/: __init__.py  fs.py  http.py  system.py
scripts/: doc_gen.py  patch_website.py
templates/basic-agent/: agent.yaml
tests/: conformance_harness.py  conftest.py  run_all.py  test_asp_sdk.py  test_auto_degradation.py  test_builder.py  test_certification.py  test_cli_scaffold.py  test_compliance.py  test_crypto_phase4.py  test_dashboard.py  test_degradation.py  test_delivery.py  test_doc_gen.py  test_e2e_full.py  test_hybrid_routing.py  test_hysteresis.py  test_isolation.py  test_knowledge.py  test_level10_audit.py  test_mega_chaos.py  test_mega_concurrency.py  test_mega_load.py  test_metrics.py  test_monitor_bot_logic.py  test_rag_integration.py  test_registry.py  test_routing_real.py  test_settings.py  test_std_fs.py  test_std_integration.py  test_stress_benchmark.py  test_swarm.py  test_telegram_skills.py  test_vision.py
website/: 404.html  CNAME  _headers  _redirects  index.html  maintenance.html  manifest.json  og-image.html  robots.txt  sitemap.xml  style.css
website/docs/: index.html
(+17 files in other folders)
