[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "osp-sdk"
version = "0.1.0"
description = "Open Skills Protocol — intelligent AI skill routing with built-in safety, degradation, and crypto"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "OSP Contributors"},
]
keywords = ["ai", "skills", "routing", "protocol", "llm", "agents", "osp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.5.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=2.0.0", "scikit-learn>=1.0.0", "numpy>=1.20.0"]
crypto = ["cryptography>=42.0.0"]
metrics = ["prometheus-client>=0.19.0"]
full = ["osp-sdk[ml]", "osp-sdk[crypto]", "osp-sdk[metrics]", "fastapi>=0.100.0", "psutil>=5.9.0"]

[project.scripts]
asp = "asp.cli:main"

[project.urls]
Homepage = "https://amadeq.org"
Documentation = "https://docs.amadeq.org"
Repository = "https://github.com/amadeq/osp-sdk"

[tool.setuptools.packages.find]
include = ["asp*", "osp_core*", "osp_server*", "osp_cli*", "osp_std*"]
